--- a/css/styles.css
+++ b/css/styles.css
@@ -47,42 +47,175 @@ p {
 }
 
 .container {
-    width: 320px;
+    max-width: 320px;
     padding: 0 16px;
     margin: 0 auto;
 }
 
+.section {
+    padding: 96px 0;
+}
+
 /* =========================HEADER-START==================== */
-/* .header {} */
+.header {
+    border-bottom: 1px solid #e7e9fc;
+    padding: 0 15px;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 
-/* .navigation {} */
+.nav-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
-/* .navigation-link {} */
+.navigation {
+    display: flex;
+    align-items: center;
+}
 
-/* .navigation-span {} */
+.navigation-link {
+    font-weight: 700;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    padding: 17px 0;
+}
 
-/* .header-list {} */
+.navigation-span {
+    font-weight: 700;
+    color: #2e2f42;
+}
+
+.header-list {
+    display: none;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-list a:hover {
+    color: #404bbf;
+}
 
 /* .header-item {} */
 
-/* .header-link {} */
+.header-link {
+    font-weight: 500;
+    color: #2e2f42;
+    display: block;
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .contacts {} */
+.studio {
+    position: relative;
+    color: #404bbf;
+}
 
-/* .contacts-list {} */
+.studio::after {
+    content: '';
+    border-radius: 2px;
+    width: 48px;
+    height: 4px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404bbf;
+    display: block;
+}
+
+.contacts {
+    font-style: normal;
+    margin-left: auto;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-list {
+    display: none;
+    /* gap: 40px; */
+}
 
 /* .contacts-item {} */
 
-/* .contacts-link {} */
+/* .contacts-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
+
+.contacts a:hover,
+.contacts a:focus {
+    color: #404bbf;
+}
+
+.open-menu-btn {
+    padding: 0;
+    line-height: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+/* .open-menu-icon {
+    fill: #2f2f37;
+} */
+
 /* ======================HEADER-END=============================== */
 
 /* =========================HERO-START================================ */
 
-/* .hero {} */
+.hero {
+    background: #2e2f42;
+    max-width: 320px;
+    background-size: cover;
+    margin: 0 auto;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-image320.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 188px 0;
+}
 
-/* .hero-title {} */
+.hero-title {
+    box-sizing: border-box;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #fff;
+    max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
+}
 
-/* .hero-btn {} */
+.hero-btn {
+    background: #4d5ae5;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    margin: 0 auto;
+    display: block;
+    padding: 16px 32px;
+    border: 0;
+    border-radius: 4px;
+    width: 169px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: #404bbf;
+}
 
 /* .hero-text-btn {} */
 
@@ -92,41 +225,144 @@ p {
 
 /* .information {} */
 
-/* .visually-hidden {} */
+.information-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px;
+}
 
-/* .information-list {} */
+.information-item {
+    width: 100%;
+}
 
-/* .information-item {} */
+.information-item-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    /* text-align: center; */
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
 
-/* .information-item-title {} */
+.information-item-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    font-weight: 500;
+    color: #434455;
+}
 
-/* .information-item-text {} */
+.information-item-icons {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
+
+.info-icons {
+    fill: #2e2f42;
+    display: block;
+    width: 264px;
+}
 
 /* ==========================INFORMATION-END============================ */
 
 /* ==========================TEAM-START====================== */
 
-/* .team-title {} */
+.team {
+    background: #f4f4fd;
+}
 
-/* .team-list {} */
+.team-title {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 72px;
+}
 
-/* .team-item {} */
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px;
+    justify-content: center;
+}
+
+.team-item {
+    background-color: #ffffff;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 
+        0 1px 1px 0 rgba(46, 47, 66, 0.16), 
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 /* .team-img {} */
 
-/* .team-name {} */
+.team-name {
+    padding: 32px 0;
+}
 
-/* .team-name-title {} */
+.team-name-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
 
-/* .team-title-text {} */
+.team-title-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+}
 
-/* .team-soc-list {} */
+.team-soc-list {
+    display: flex;
+    gap: 24px;
+    margin-top: 8px;
+    padding: 0 16px;
+    justify-content: center;
+}
 
-/* .team-soc-item {} */
+.team-soc-item {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .team-soc-link {} */
+.team-soc-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .team-soc-icons {} */
+.team-soc-icons {
+    fill: #f4f4fd;
+}
+
+.team-item:hover .team-soc-link {
+    background-color: #404bbf;
+}
+
+.team-soc-link:focus {
+    background-color: #404bbf;
+}
 
 /* ==========================TEAM-END========================= */
 
@@ -134,63 +370,194 @@ p {
 
 /* .portfolio {} */
 
-/* .portfolio-title {} */
+.portfolio-title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+}
 
-/* .portfolio-list {} */
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px;
+}
 
-/* .portfolio-item {} */
+.portfolio-item {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .portfolio-carts {} */
+.portfolio-carts {
+    position: relative;
+    overflow: hidden;
+}
 
 /* .portfolio-carts-img {} */
 
-/* .portfolio-carts-text {} */
+.portfolio-carts-text {
+    position: absolute;
+    top: 0;
+    background-color: #4d5ae5;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    height: 100%;
+    width: 100%;
+    padding: 40px 32px;
+    display: flex;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .portfolio-carts-description {} */
+.portfolio-carts-description {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 
-/* .portfolio-carts-title {} */
+.portfolio-carts-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
 
-/* .carts-description-text {} */
+.carts-description-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.portfolio-item:hover .portfolio-carts-text {
+    transform: translateY(0%);
+}
 
 /* ========================PORTFOLIO-END======================= */
 
 /* ========================FOOTER-START======================== */
 
-/* .footer {} */
+.footer {
+    background: #2e2f42;
+    padding: 100px 0;
+}
 
-/* .footer-top {} */
+.footer-top {
+    margin-right: 120px;
+}
 
-/* .footer-top-link {} */
+.footer-top-link {
+    display: inline-block;
+    margin-bottom: 16px;
+}
 
-/* .footer-top-span {} */
+.footer-top-span {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #f4f4fd;
+}
 
-/* .footer-top-text {} */
+.footer-top-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    max-width: 264px;
+    margin-bottom: 16px;
+}
 
 /* .footer-soc {} */
 
-/* .footer-soc-title {} */
+.footer-soc-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
 
-/* .footer-soc-list {} */
+.footer-soc-list {
+    display: flex;
+    gap: 16px;
+}
 
-/* .footer-soc-item {} */
+.footer-soc-item {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .footer-soc-link {} */
+.footer-soc-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .footer-soc-icons {} */
+.footer-soc-icons {
+    fill: #f4f4fd;
+}
+/* .subscribe {
+    display: flex;
+    align-items: baseline;
+} невідомо */
+.subscribe {
+    margin-right: 0;
+    margin-left: auto;
+}
 
-/* .subscribe {} */
-
-/* .subscribe-title {} */
-
-/* .subscribe-form {} */
+.subscribe-form {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    position: relative;
+}
 
 /* .subscribe-label {} */
 
 /* .subscribe-label-input {} */
 
-/* .subscribe-btn {} */
+.subscribe-btn {
+    font-family: "Roboto", sans-serif;
+    background-color: #4d5ae5;
+    border-radius: 4px;
+    border: none;
+    padding: 8px 24px;
+    min-width: 165px;
+    height: 40px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #ffffff;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
 
-/* .subscribe-btn-icon {} */
+.subscribe-btn-icon {
+    margin-left: 16px;
+    position: absolute;
+    fill: #fff;
+    top: 8px;
+    right: 24px;
+}
 
 /* ========================FOOTER-END========================== */
 
@@ -235,3 +602,102 @@ p {
 /* .modal-btn-submit {} */
 
 /* ========================MODAL-END=========================== */
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+    .open-menu-btn {
+        display: none;
+    }
+    .header-list {
+        display: flex;
+        gap: 40px;
+    }
+    .navigation-link {
+        margin-right: 120px;
+    }
+    .contacts-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+    .contacts-link {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        /* color: #434455; */
+    }
+    .information-list {
+        flex-flow: row wrap;
+        gap: 24px;
+    }
+    .information-item {
+        width: calc((100% - 24px) / 2);
+    }
+    /* .team {
+        padding-right: 92px;
+        padding-left: 92px;
+    } */
+    .team-list {
+        gap: 24px;
+    }
+    .team-item {
+        width: calc((100% - 24px) / 2);
+        /* width: 264px; */
+    }
+    .portfolio-list {
+        gap: 48px 24px;
+    }
+    .portfolio-item {
+        width: calc((100% - 24px) / 2);
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+    .team {
+        padding-left: 92px;
+        padding-right: 92px;
+    }    
+}
+
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+        padding: 0 15px;
+    }
+    /* .header-list {
+        display: flex;
+        gap: 40px;
+    } */
+    .navigation-link {
+        margin-right: 76px;
+    }
+    .contacts-list {
+        /* display: flex; */
+        flex-direction: row;
+        gap: 40px;
+    }
+    .contacts-link {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+    .information-item {
+        width: calc((100% - 3 * 24px) / 4);
+    }
+    .information-item-icons {
+        display: flex;
+    }
+    /* .team {
+        padding-right: 0;
+        padding-left: 0;
+    } */
+    .team-item {
+        width: calc((100% - 72px) / 4);
+    }
+    .portfolio-item {
+        width: calc((100% - 2 * 24px) / 3);
+    }
+}
