--- a/css/styles.css
+++ b/css/styles.css
@@ -177,10 +177,19 @@ p {
     max-width: 320px;
     background-size: cover;
     margin: 0 auto;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-image320.jpg);
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/320px/hero-image320.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    padding: 188px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 72px 0;
+}
+
+.hero-wrap {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .hero-title {
@@ -188,11 +197,14 @@ p {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
+    text-align: center;
     color: #fff;
     max-width: 496px;
+    padding: 0 36px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 48px;
+    /* margin-bottom: 48px; */
+    margin-bottom: 72px;
 }
 
 .hero-btn {
@@ -208,7 +220,7 @@ p {
     padding: 16px 32px;
     border: 0;
     border-radius: 4px;
-    width: 169px;
+    /* width: 169px; */
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -302,6 +314,7 @@ p {
         0 1px 1px 0 rgba(46, 47, 66, 0.16), 
         0 1px 6px 0 rgba(46, 47, 66, 0.08);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 264px;
 }
 
 /* .team-img {} */
@@ -443,15 +456,24 @@ p {
 
 .footer {
     background: #2e2f42;
-    padding: 100px 0;
+    /* padding: 100px 0; */
+    padding: 96px 0;
+}
+.botom-form {
+    display: flex;
+    flex-direction: column;
 }
 
 .footer-top {
-    margin-right: 120px;
+    /* margin-right: 120px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer-top-link {
     display: inline-block;
+    padding: 0;
     margin-bottom: 16px;
 }
 
@@ -471,10 +493,15 @@ p {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
-    margin-bottom: 16px;
+    /* margin-bottom: 16px; */
 }
 
-/* .footer-soc {} */
+.footer-soc {
+    margin: 72px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .footer-soc-title {
     font-weight: 500;
@@ -510,33 +537,66 @@ p {
 .footer-soc-icons {
     fill: #f4f4fd;
 }
+
+.footer-soc-link:hover, .footer-soc-link:focus {
+    background-color: #31d0aa;
+}
+
 /* .subscribe {
     display: flex;
     align-items: baseline;
-} невідомо */
+}  */
+/* невідомо */
 .subscribe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-right: 0;
-    margin-left: auto;
 }
 
 .subscribe-form {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    /* gap: 24px; */
+    gap: 16px 0;
     align-items: center;
-    position: relative;
+    /* position: relative; */
 }
 
-/* .subscribe-label {} */
+/* .subscribe-label {
+    width: 288px;
+} */
 
-/* .subscribe-label-input {} */
+.subscribe-label-input {
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 288px;
+    height: 40px;
+    padding: 8px 16px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+}
+
+.subscribe-label-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+}
 
 .subscribe-btn {
+    position: relative;
     font-family: "Roboto", sans-serif;
     background-color: #4d5ae5;
     border-radius: 4px;
     border: none;
     padding: 8px 24px;
-    min-width: 165px;
+    width: 165px;
     height: 40px;
     font-weight: 500;
     font-size: 16px;
@@ -547,7 +607,7 @@ p {
     cursor: pointer;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 16px;
 }
 
@@ -563,43 +623,252 @@ p {
 
 /* ========================MODAL-START========================= */
 
-/* .backdrop {} */
+.backdrop {
+    position: fixed;
+    top: 0;
+    background: rgba(46, 47, 66, 0.4);
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .modal {} */
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
 
-/* .close-btn {} */
+.modal {
+    position: absolute;
+    width: 288px;
+    min-height: 584px;
+    background: #fcfcfc;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 72px 16px 24px 16px;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .close-icon {} */
+.close-btn {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    border-radius: 50%;
+    background-color: #e7e9fc;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    fill: #2e2f42;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover {
+    background-color: #404bbf;
+    border: none;
+}
+
+.close-btn:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover .close-icon {
+    fill: #ffffff;
+}
+
+.close-btn:focus .close-icon {
+    fill: #ffffff;
+}
 
 /* .close-icon-img {} */
 
-/* .modal-title {} */
+.modal-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
 
 /* .modal-form {} */
 
-/* .modal-field {} */
+.modal-field {
+    margin-bottom: 8px;
+}
 
-/* .modal-field-label {} */
+.modal-field-label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
+}
 
-/* .modal-field-wrap {} */
+.modal-field-label span {
+    display: block;
+    margin-bottom: 4px;
+}
 
-/* .modal-wrap-input {} */
 
-/* .modal-wrap-icons {} */
+.modal-field-wrap {
+    position: relative;
+}
+
+.modal-wrap-input {
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    outline: transparent;
+    padding-left: 38px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-wrap-input:focus {
+    border: 1px solid #4d5ae5;
+}
+
+.modal-wrap-input:focus + .modal-wrap-icons {
+    fill: #4d5ae5;
+}
+
+.com {
+    margin-bottom: 16px;
+}
+
+.com::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-wrap-icons {
+    position: absolute;
+    fill: #2e2f42;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 /* .name {} */
 
-/* .coment-textarea {} */
+.coment-textarea {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    outline: transparent;
+    padding: 8px 16px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    resize: none;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* .checkbox-label {} */
+.coment-textarea:focus {
+    border: 1px solid #4d5ae5;
+}
 
-/* .checkbox-wrap {} */
+.checkbox-label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.checkbox-label span {
+    margin-right: 8px;
+    position: relative;
+}
+
+.checkbox-wrap {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
 
 /* .checkbox-icon {} */
 
-/* .check-link {} */
+.check-link {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
 
-/* .modal-btn-submit {} */
+.modal-check:checked +.checkbox-label span {
+    background-color: #404bbf;
+    border: 1px solid #404bbf;
+    fill: #f4f4fd;
+    border: none
+}
+
+.modal-btn-submit {
+    display: block;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: #4d5ae5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.privace-policy {
+    margin-top: 16px;
+    margin-bottom: 24px;
+}
 
 /* ========================MODAL-END=========================== */
 
@@ -629,6 +898,19 @@ p {
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         /* color: #434455; */
     }
+
+    .hero {
+        max-width: 768px;
+        padding: 112px 0;
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_768px.jpg);
+    }
+
+    .hero-title {
+        font-size: 56px;
+        line-height: 1.07;
+        padding: 0;
+    }
+
     .information-list {
         flex-flow: row wrap;
         gap: 24px;
@@ -643,24 +925,56 @@ p {
     .team-list {
         gap: 24px;
     }
-    .team-item {
+    /* .team-item {
         width: calc((100% - 24px) / 2);
-        /* width: 264px; */
-    }
+        width: 264px;
+    } */
     .portfolio-list {
         gap: 48px 24px;
     }
     .portfolio-item {
         width: calc((100% - 24px) / 2);
     }
+
+    .botom-form {
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding-left: 92px;
+        gap: 72px 24px;
+    }
+
+    .footer-top {
+        align-items: normal;
+    }
+
+    .footer-soc {
+        margin: 0;
+        align-items: normal;
+    }
+
+    .subscribe {
+        align-items: start;
+    }
+
+    .subscribe-form {
+        flex-direction: row;
+        gap: 24px;
+    }
+    .subscribe-label-input {
+        width: 264px;
+    }
+    .modal {
+        width: 408px;
+        padding: 72px 24px 24px 24px;
+    }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1157px) {
+/* @media screen and (min-width: 768px) and (max-width: 1157px) {
     .team {
         padding-left: 92px;
         padding-right: 92px;
     }    
-}
+} */
 
 @media screen and (min-width: 1158px) {
     .container {
@@ -671,6 +985,13 @@ p {
         display: flex;
         gap: 40px;
     } */
+
+    .hero {
+        max-width: 1440px;
+        padding: 188px 0;
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_image.jpg);
+    }
+    
     .navigation-link {
         margin-right: 76px;
     }
@@ -690,6 +1011,14 @@ p {
     .information-item-icons {
         display: flex;
     }
+    .information-item-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+    }
+    .information-item-text {
+        font-weight: 400;
+    }
     /* .team {
         padding-right: 0;
         padding-left: 0;
@@ -699,5 +1028,14 @@ p {
     }
     .portfolio-item {
         width: calc((100% - 2 * 24px) / 3);
+    }
+    .botom-form {
+        gap: 0;
+    }
+    .footer-top {
+        margin-right: 120px;
+    }
+    .subscribe {
+        margin-left: auto;
     }
 }
